# 1230-final-project

./: CMakeLists.txt  README.md
bird_model/: Eagle.mtl
build-realtime-v2-Qt_6_2_4_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  projects_realtime
build-realtime-v2-Qt_6_2_4_for_macOS-Debug/.cmake/api/v1/reply/: cache-v2-f5d9d193b603ed84b3c4.json  cmakeFiles-v1-c339697142241de1c7f7.json  codemodel-v2-2f083a939ecdb7627c52.json  index-2022-12-14T15-09-31-0820.json  target-StaticGLEW-Debug-15e054cccfba902aa113.json  target-StaticGLEW_autogen-Debug-cea51e5f91574fc33141.json  target-StaticGLEW_autogen_timestamp_deps-Debug-51f2726b7f1db8c1bd50.json  target-projects_realtime-Debug-fe95698dd6767f7130b3.json  target-projects_realtime_autogen-Debug-16d5b3488b5e30d72f15.json  (+2 more)
build-realtime-v2-Qt_6_2_4_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-realtime-v2-Qt_6_2_4_for_macOS-Debug/.rcc/: Resources.qrc  qrc_Resources.cpp
build-realtime-v2-Qt_6_2_4_for_macOS-Debug/StaticGLEW_autogen/: deps
build-realtime-v2-Qt_6_2_4_for_macOS-Debug/glm/: cmake_install.cmake
build-realtime-v2-Qt_6_2_4_for_macOS-Debug/projects_realtime_autogen/: deps  moc_predefs.h
build-realtime-v2-Qt_6_2_4_for_macOS-Debug/projects_realtime_autogen/UVLADIE3JM/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
realtime-v2/: 3.mtl  4.3DS  CMakeLists.txt  CMakeLists.txt.user.3b6b6b1  README.md
realtime-v2/resources/shaders/: bird.frag  bird.vert  cube.frag  default.frag  default.vert  depth.frag  depth.vert  fbo.frag  fbo.vert  fragment.frag  fullscreen.frag  phong.frag  phong.vert  skybox.vert  vertex.vert
realtime-v2/src/: OBJ_Loader.h  actionHandler.cpp  camera.cpp  camera.h  fboHandler.cpp  loadHelper.cpp  mainwindow.cpp  paintHelper.cpp  realtime.cpp  realtime.h  settings.h  terraingenerator.cpp  terraingenerator.h
realtime-v2/src/shapes/: cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  shape.h  sphere.cpp  sphere.h
realtime-v2/src/utils/: scenedata.h  sceneparser.cpp  sceneparser.h
resources/shaders/: fullscreen.vert  phong.vert
shadow_mapping/resources/shaders/: fullscreen.frag  phong.frag
shadow_mapping/src/: mainwindow.cpp  mainwindow.h  realtime.cpp
shadow_mapping/src/camera/: camera.cpp  camera.h
shadow_mapping/src/data/: vao.h  vbo.cpp  vbo.h
shadow_mapping/src/shape/: cube.h  shape.h  sphere.cpp  sphere.h
shadow_mapping/src/utils/: meshloader.cpp  meshloader.h  tiny_obj_loader.h
src/: realtime.h
src/data/: vao.cpp
src/shape/: cone.cpp  cone.h  cube.cpp  cylinder.cpp  cylinder.h  shape.cpp
src/utils/: sceneparser.cpp
terrain/: CMakeCache.txt  Makefile  cmake_install.cmake
terrain/assets/: BirdRender_blend.blend
terrain/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
terrain/glfw/src/: Makefile  cmake_install.cmake
terrain/src/: main.cpp
(+603 files in other folders)
